// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runAsyncTest: failing State updates Initial state matches snapshot (sanity) 1`] = `
Object {
  "lagging": Array [],
  "optionalFields": Object {},
  "pending": Array [
    VestTest {
      "asyncTest": Promise {},
      "fieldName": "field_1",
      "id": "8",
      "message": "some message string",
      "status": "PENDING",
      "testFn": [MockFunction],
      "warns": false,
    },
  ],
  "prevTestObjects": Array [],
  "skippedTests": Array [],
  "suiteId": "1000",
  "testCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Object {
      "field_1": Array [],
    },
  },
  "testObjects": Array [],
  "testObjectsCursor": 0,
}
`;

exports[`runAsyncTest: passing State updates Initial state matches snapshot (sanity) 1`] = `
Object {
  "lagging": Array [],
  "optionalFields": Object {},
  "pending": Array [
    VestTest {
      "asyncTest": Promise {},
      "fieldName": "field_1",
      "id": "0",
      "message": "some message string",
      "status": "PENDING",
      "testFn": [MockFunction],
      "warns": false,
    },
  ],
  "prevTestObjects": Array [],
  "skippedTests": Array [],
  "suiteId": "1000",
  "testCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Object {
      "field_1": Array [],
    },
  },
  "testObjects": Array [],
  "testObjectsCursor": 0,
}
`;
